--- a/package.json
+++ b/package.json
@@ -1,47 +1,46 @@
 {
-	"name": "grunt-mangony",
-	"version": "1.0.0",
-	"description": "Grunt wrapper for Mangony, another static site generator - fast, simple and powerful.",
-	"homepage": "https://github.com/Sebastian-Fitzner/grunt-mangony",
-	"repository": "https://github.com/Sebastian-Fitzner/grunt-mangony",
-	"author": {
-		"name": "Sebastian Fitzner",
-		"email": "sebastian@veams.org",
-		"url": "mangony.org"
-	},
-	"main": "Gruntfile.js",
-	"engines": {
-		"node": ">= 0.10.28"
-	},
-	"licenses": [
-		{
-			"type": "MIT"
-		}
-	],
-	"dependencies": {
-		"mangony": "~1.0.0"
-	},
-	"devDependencies": {
-		"grunt": "~1.0.0",
-		"grunt-contrib-clean": "~0.5.0",
-		"grunt-contrib-jshint": "~0.8.0",
-		"grunt-contrib-nodeunit": "~0.3.0",
-		"time-grunt": "*",
-		"load-grunt-tasks": "^2.0.0"
-	},
-	"peerDependencies": {
-		"grunt": "~0.4.1"
-	},
-	"scripts": {
-		"test": "grunt test"
-	},
-	"keywords": [
-		"grunt",
-		"grunt plugin",
-		"static site generator",
-		"mangony",
-		"site generator",
-		"generator",
-		"build html"
-	]
+  "name": "grunt-mangony",
+  "version": "1.0.1",
+  "description": "Grunt wrapper for Mangony, another static site generator - fast, simple and powerful.",
+  "homepage": "https://github.com/Sebastian-Fitzner/grunt-mangony",
+  "repository": "https://github.com/Sebastian-Fitzner/grunt-mangony",
+  "author": {
+    "name": "Sebastian Fitzner",
+    "email": "sebastian@veams.org",
+    "url": "mangony.org"
+  },
+  "main": "Gruntfile.js",
+  "engines": {
+    "node": ">= 0.10.28"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ],
+  "dependencies": {
+    "deep-extend": "^0.4.1",
+    "mangony": "~1.0.0"
+  },
+  "devDependencies": {
+    "grunt": "~1.0.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-nodeunit": "~0.3.0",
+    "time-grunt": "*",
+    "load-grunt-tasks": "^2.0.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "keywords": [
+    "grunt",
+    "grunt plugin",
+    "gruntplugin",
+    "static site generator",
+    "mangony",
+    "site generator",
+    "generator",
+    "build html"
+  ]
 }
